k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beu-cro-adv-daba-26 # Nom du déploiement
  namespace: beu-cro-adv-daba-26 # 📝 Votre namespace
spec:
  replicas: 1 # 📝 Ajustez selon la charge attendue
  selector:
    matchLabels:
      app: beu-cro-adv-daba-26 # Nom du label
  template:
    metadata:
      labels:
        app: beu-cro-adv-daba-26
    spec:
      imagePullSecrets:
        - name: regcred # Secret pour registry privé (si besoin)
      containers:
        - name: beu-cro-adv-daba-26
          image: registry.forge.hefr.ch/beu-cro/adv-daba-26:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
