k8s/streamer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamer
  namespace: beu-cro-adv-daba-26
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamer
  template:
    metadata:
      labels:
        app: streamer
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret 
      containers:
        - name: streamer
          image: registry.forge.hefr.ch/lena.beust/adv-daba-26:latest
          resources:
            requests:
               memory: "3000Mi"
               cpu: "2000m"
            limits:
               memory: "3000Mi"
               cpu: "2000m"
