k8s/neo4j.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  namespace: beu-cro-adv-daba-26
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j:4.4.15-community
          ports:
            - containerPort: 7687
            - containerPort: 7474
          resources:
            limits:
              memory: "3Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: beu-cro-adv-daba-26
spec:
  selector:
    app: neo4j
  ports:
    - name: bolt
      port: 7687
      targetPort: 7687
    - name: http
      port: 7474
      targetPort: 7474
