k8s/services.yaml
# Service pour la Base de données (Non accessible de l'extérieur)
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: beu-cro-adv-daba-26
spec:
  ports:
    - port: 5432  # Port exposé par le service. (Pour PostgreSQL, c'est généralement 5432)
      targetPort: 5432 # Port réel du conteneur PostgreSQL
  selector:
    app: postgres
  type: ClusterIP
---
# Service pour le Backend (Sera pointé par l'Ingress)
apiVersion: v1
kind: Service
metadata:
  name: beu-cro-adv-daba-26-service
  namespace: beu-cro-adv-daba-26
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 80         # Port exposé par le service
      targetPort: 8080 # Port réel du conteneur
  selector:
    app: beu-cro-adv-daba-26
