k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beu-cro-adv-daba-26-ingress
  namespace: beu-cro-adv-daba-26
spec:
  ingressClassName: nginx-ext  # Entrer que `nginx` pour une exposition interne au réseau de la HEIA
  rules:
    # 📝 Sous domaine de la HEIA. Seul 1 sous domaine est pris en compte,
    # il ne doit pas contenir de "." et doit être unique
    - host: beu-cro-adv-daba-26.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beu-cro-adv-daba-26-service
                port:
                  number: 80
  tls:
    - hosts:
        - beu-cro-adv-daba-26.kube-ext.isc.heia-fr.ch # 📝 Sous domaine de la HEIA.
      secretName: beu-cro-adv-daba-26-tls-cert # 📝 Nom du secret TLS
